--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,71 @@
-*{
-  background-color: aqua;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.navbar {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(0, 0, 0);
+}
+.navbar-container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  color: #fff;
+  padding: 0 50px;
+}
+.logo-container {
+  flex: 1;
+  color: #04f14f;
+}
+.menu-container {
+  flex: 6;
+}
+.menu-list {
+  display: flex;
+  list-style: none;
+}
+.menu-list-item {
+  margin-right: 30px;
+}
+.menu-list-item.active {
+  font-weight: bold;
+}
+.profile-container {
+  flex: 2;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.profile-picture {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.profile-text-container {
+  margin: 0 20px;
+}
+.toggle{
+  width: 40px;
+  height: 20px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #fff;
+  border-radius: 30px;
+}
+.toogle-icon{ 
+  color: gold;
+}
+.toggle-ball{ 
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  right: 1px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: black;
 }
