--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,24 @@
   height: 18px;
   position: absolute;
   right: 1px;
+  background-color: black;
   border-radius: 50%;
   cursor: pointer;
-  background-color: black;
 }
+.sidebar{
+  width: 50px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: black;
+  padding-top: 60px;
+}
+.left-menu-icon{
+  color: #fff;
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+
