--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,116 @@
   font-size: 20px;
   margin-bottom: 40px;
 }
+.container {
+  min-height: calc(100vh - 50px);
+  background-color: #151515;
+  color: #fff;
+}
+.content-container {
+  margin-left: 50px;
+}
+.featured-content {
+  height: 50vh;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #151515),
+    url("/cover.jpg") no-repeat center/cover;
+  padding: 50px;
+}
+.featured-title {
+  width: 200px;
+}
+.featured-desc {
+  width: 500px;
+  color: lightgray;
+  margin: 30px 0;
+}
+.featured-button {
+  background-color: #06ff00;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  font-weight: bold;
+}
+.movie-list-container {
+  padding: 150px;
+}
+.movie-list-wrapper {
+  position: relative;
+  display: flex;
+  overflow: hidden;
+}
+.movie-list {
+  height: 300px;
+  display: flex;
+  align-items: center;
+  transform: translateX(0);
+}
+.movie-list-item {
+  position: relative;
+  margin-right: 30px;
+  padding: 10px;
+}
+.movie-list-item:hover .movie-list-item-img {
+  transform: scale(1.2);
+  margin: 0 30px;
+  opacity: 0.5;
+}
+.movie-list-item:hover .movie-list-item-title,
+.movie-list-item:hover .movie-list-item-desc,
+.movie-list-item:hover .movie-list-item-button {
+  opacity: 1;
+}
+.movie-list-item-img {
+  width: 270px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 20px;
+  transition: all 1s ease-in-out;
+}
+.movie-list-item-title {
+  /* width: 230px; */
+  position: absolute;
+  top: 10%;
+  left: 50px;
+  background-color: #333;
+  padding: 0 10px;
+  font-size: 32px;
+  font-weight: bold;
+  opacity: 0;
+  transition: all 1s ease-in;
+}
+.movie-list-item-desc {
+  width: 230px;
+  position: absolute;
+  top: 30%;
+  left: 50px;
+  background-color: #333;
+  padding: 10px;
+  font-size: 14px;
+  opacity: 0;
+  transition: all 1s ease-in;
+}
+.movie-list-item-button {
+  position: absolute;
+  bottom: 20px;
+  left: 50px;
+  background-color: #06ff00;
+  color: white;
+  font-weight: bold;
+  border-radius: 10px;
+  padding: 10px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  opacity: 0;
+  transition: all 1s ease-in;
+}
+.arrow {
+  position: absolute;
+  top: 90px;
+  right: 0;
+  font-size: 120px;
+  color: lightgray;
+  opacity: 0.8;
+}
