--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+button:hover {
+  opacity: 0.8;
+}
 .navbar {
   width: 100%;
   height: 50px;
@@ -79,28 +82,42 @@
   align-items: center;
   background-color: black;
   padding-top: 60px;
+  opacity: 0;
 }
 .left-menu-icon {
   color: #fff;
   font-size: 20px;
   margin-bottom: 40px;
 }
+.left-menu-icon:hover,
+.menu-list-item:hover {
+  color: #06ff00;
+}
 .container {
   min-height: calc(100vh - 50px);
   background-color: #151515;
   color: #fff;
 }
-.content-container {
-  margin-left: 50px;
-}
 .featured-content {
   height: 50vh;
+  position: relative;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #151515),
     url("/cover.jpg") no-repeat center/cover;
   padding: 50px;
 }
 .featured-title {
+  position: relative;
   width: 200px;
+}
+.video {
+  position: absolute;
+  top: 95px;
+  left: 50px;
+  width: 45px;
+  opacity: 0;
+}
+.featured-title:hover + .video {
+  opacity: 1;
 }
 .featured-desc {
   width: 500px;
@@ -117,18 +134,20 @@
   font-weight: bold;
 }
 .movie-list-container {
-  padding: 150px;
+  padding: 10px 258px;
 }
 .movie-list-wrapper {
   position: relative;
   display: flex;
   overflow: hidden;
+  padding: 0 30px;
 }
 .movie-list {
   height: 300px;
   display: flex;
   align-items: center;
   transform: translateX(0);
+  transition: all 1s ease-in-out;
 }
 .movie-list-item {
   position: relative;
@@ -213,6 +232,9 @@
 .left-menu-icon.active {
   color: #000;
 }
+.left-menu-icon.active:hover {
+  color: #06ff00;
+}
 .toggle.active {
   background-color: #000;
 }
@@ -226,4 +248,49 @@ footer {
   color: #fff;
   font-size: 60px;
   padding: 10px 0;
+}
+@media only screen and (max-width: 1298px) {
+  .menu-container {
+    display: none;
+  }
+  .content-container {
+    margin-left: 50px;
+  }
+  .sidebar {
+    opacity: 1;
+  }
+  footer {
+    font-size: 30px;
+    margin-left: 50px;
+  }
+}
+@media only screen and (max-width: 1510px) {
+  .movie-list-container {
+    padding: 10px 100px;
+  }
+}
+@media only screen and (max-width: 630px) {
+  .featured-desc {
+    width: 300px;
+    color: lightgray;
+    margin: 30px 0;
+  }
+  .movie-list-container {
+    padding: 10px 5px;
+  }
+  footer {
+    font-size: 20px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .featured-desc {
+    width: 250px;
+    margin: 20px 0;
+  }
+  .movie-list-wrapper {
+    padding: 0 15px;
+  }
+  .movie-list-item {
+    margin-right: 10px;
+  }
 }
